Editors/Zed/TreeSitter/grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.import_declaration,
          $.use_declaration,
          $.structure_definition,
          $.function_definition,
          $.native_function_declaration,
          $.public_declaration,
        ),
      ),

    public_declaration: ($) =>
      seq(field("visibility", "pub"), choice($.structure_definition, $.function_definition)),

    structure_definition: ($) =>
      seq(
        choice("struct", "class"),
        field("name", $.identifier),
        optional(seq(":", field("base", $.named_type))),
        "{",
        repeat(
          choice(
            seq(optional(field("visibility", choice("pub", "sub"))), $.structure_field),
            seq(optional(field("visibility", choice("pub", "sub"))), $.constructor_definition),
            seq(
              optional(field("override", "override")),
              optional(field("visibility", choice("pub", "sub"))),
              $.function_definition,
            ),
          ),
        ),
        "}",
      ),

    structure_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
        choice(";", $._automatic_semicolon),
      ),

    constructor_definition: ($) =>
      seq(
        "init",
        $.parameter_list,
        optional(seq(":", field("super", "super"), field("arguments", $.argument_list))),
        field("body", $.block),
      ),

    function_definition: ($) =>
      seq(
        "func",
        field("name", $.identifier),
        $.parameter_list,
        optional(field("return_type", choice($.void_type, $.type))),
        field("body", $.block),
      ),

    native_function_declaration: ($) =>
      seq(
        field("native", alias("native", $.identifier)),
        "func",
        field("name", $.identifier),
        $.parameter_list,
        field("return_type", choice($.void_type, $.type)),
        choice(";", $._automatic_semicolon),
      ),

    builtin_type: (_) =>
      choice(
        "int",
        "int8",
        "int16",
        "int32",
        "int64",
        "uint",
        "uint8",
        "uint16",
        "uint32",
        "uint64",
        "float",
        "float32",
        "float64",
        "bool",
        "str",
      ),
    named_type: ($) => alias(choice($.identifier, $.qualified_name), $.type_identifier),
    function_type: ($) =>
      seq(
        "func",
        "(",
        optional(seq($.function_type_parameter, repeat(seq(",", $.function_type_parameter)))),
        ")",
        optional(choice($.void_type, $.type)),
      ),
    function_type_parameter: ($) =>
      seq(optional(field("mutable_reference", "&")), field("type", $.type)),
    array_type: ($) =>
      prec.left(
        seq(
          field("element", choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.optional_type)),
          repeat1(choice(seq("[", "]"), seq("[", field("length", $.integer_literal), "]"))),
        ),
      ),
    type: ($) => choice($.optional_type, $.array_type, $.grouped_type, $.function_type, $.builtin_type, $.named_type),
    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        optional(field("mutable_reference", "&")),
        field("type", $.type),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    statement: ($) =>
      choice(
        seq(
          choice(
            $.variable_declaration,
            $.assignment_statement,
            $.update_statement,
            $.print_statement,
            $.assert_statement,
            $.panic_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $.expression_statement,
          ),
          choice(";", $._automatic_semicolon),
        ),
        $.if_statement,
        $.while_statement,
        $.for_statement,
      ),

    variable_declaration: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        field("name", $.identifier),
        choice(
          seq($.type_annotation, optional(seq("=", field("initializer", $.expression)))),
          seq("=", field("initializer", $.expression)),
        ),
      ),

    type_annotation: ($) => seq(":", field("type", $.type)),

    assignment_statement: ($) =>
      seq(
        field("left", choice($.identifier, $.member_expression, $.index_expression)),
        field("operator", choice("=", "+=", "-=", "*=", "/=")),
        field("right", $.expression),
      ),

    print_statement: ($) =>
      seq(
        field("function", alias("print", $.identifier)),
        "(",
        field("argument", $.expression),
        ")",
      ),

    return_statement: ($) => seq("return", optional(field("value", $.expression))),

    expression_statement: ($) =>
      choice(
        $.invocation_expression,
        $.super_method_expression,
        $.safe_member_expression,
        $.cascade_expression,
      ),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.borrow_expression,
        $.conversion_expression,
        $.lambda_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.cascade_expression,
        $.sequence_literal,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.null_literal,
        $.self_expression,
        $.identifier,
      ),

    lambda_expression: ($) =>
      seq(
        "func",
        $.parameter_list,
        optional(field("return_type", choice($.void_type, $.type))),
        field("body", $.block),
      ),

    cascade_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field("receiver", $._cascade_receiver),
          choice(
            repeat1($.cascade_operation),
            seq(
              repeat($.cascade_operation),
              alias($.cascade_method_operation, $.cascade_operation),
              repeat1($.cascade_terminal_operation),
            ),
          ),
        ),
      ),

    _cascade_receiver: ($) =>
      choice(
        $.identifier,
        $.self_expression,
        $.invocation_expression,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.sequence_literal,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.parenthesized_expression,
        $.lambda_expression,
      ),

    cascade_operation: ($) =>
      seq(
        field("operator", ".."),
        choice($.cascade_method_call, $.cascade_field_assignment),
      ),

    cascade_method_call: ($) =>
      seq(
        field("method", $.identifier),
        "(",
        optional(seq($.expression, repeat(seq(",", $.expression)))),
        ")",
      ),

    cascade_field_assignment: ($) =>
      seq(
        field("field", $.identifier),
        "=",
        field("value", $._cascade_assignment_value),
      ),

    _cascade_assignment_value: ($) =>
      choice(
        alias($.cascade_binary_expression, $.binary_expression),
        alias($.cascade_unary_expression, $.unary_expression),
        alias($.cascade_borrow_expression, $.borrow_expression),
        alias($.cascade_conversion_expression, $.conversion_expression),
        $.invocation_expression,
        $.sequence_literal,
        $.member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.self_expression,
        $.identifier,
      ),

    sequence_literal: ($) =>
      seq("[", optional(seq($.expression, repeat(seq(",", $.expression)), optional(","))), "]"),

    field_initializer: ($) =>
      seq(field("name", $.identifier), ":", field("value", $.expression)),

    member_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.parenthesized_expression,
            ),
          ),
          ".",
          field("field", $.identifier),
        ),
      ),

    invocation_expression: ($) =>
      seq(
        field(
          "target",
          choice(
            $.identifier,
            $.qualified_name,
            $.parenthesized_expression,
            $.lambda_expression,
            $.member_expression,
            $.safe_member_expression,
            $.index_expression,
          ),
        ),
        "(",
        optional(
          choice(
            seq($.expression, repeat(seq(",", $.expression))),
            seq($.field_initializer, repeat(seq(",", $.field_initializer)), optional(",")),
          ),
        ),
        ")",
      ),

    index_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.parenthesized_expression,
            ),
          ),
          "[",
          field("index", $.expression),
          "]",
        ),
      ),

    slice_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.parenthesized_expression,
            ),
          ),
          "[",
          field("start", $.expression),
          ":",
          field("end", $.expression),
          "]",
        ),
      ),

    string_literal: ($) =>
      seq('"', repeat(choice($.escape_sequence, /[^"\\\n\r]+/)), '"'),

    integer_literal: (_) =>
      choice(
        /0[bB][01](?:_?[01])*/,
        /0[oO][0-7](?:_?[0-7])*/,
        /0[xX][0-9a-fA-F](?:_?[0-9a-fA-F])*/,
        /\d(?:_?\d)*/,
      ),
    self_expression: (_) => "self",
    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,
